--- a/ChenXiaoLiu-Lab3/Base.lproj/Main.storyboard
+++ b/ChenXiaoLiu-Lab3/Base.lproj/Main.storyboard
@@ -1,24 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K9n-LK-uBt">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Welcome-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ChenXiaoLiu_Lab3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="x8A-BB-XzR">
+                                <rect key="frame" x="0.0" y="687" width="390" height="123"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="c0B-6l-Thw">
+                                        <rect key="frame" x="20" y="0.0" width="350" height="32"/>
+                                        <segments>
+                                            <segment title="🔴"/>
+                                            <segment title="🟠"/>
+                                            <segment title="🟡"/>
+                                            <segment title="🟢"/>
+                                            <segment title="🔵"/>
+                                            <segment title="🟣"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="colorDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="kYE-pY-cbC"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7QX-VT-mA7">
+                                        <rect key="frame" x="20" y="46" width="350" height="32"/>
+                                        <segments>
+                                            <segment title="" image="square" catalog="system"/>
+                                            <segment title="" image="circle" catalog="system"/>
+                                            <segment title="" image="triangle" catalog="system"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="shapeDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="74o-ak-R1X"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="NP5-vI-sGw">
+                                        <rect key="frame" x="20" y="92" width="350" height="32"/>
+                                        <segments>
+                                            <segment title="Draw"/>
+                                            <segment title="Move"/>
+                                            <segment title="Erase"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="inputModeDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Qs3-p2-n6Y"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="c0B-6l-Thw" secondAttribute="trailing" constant="20" id="6Il-cy-dPd"/>
+                                    <constraint firstAttribute="trailing" secondItem="7QX-VT-mA7" secondAttribute="trailing" constant="20" id="FXy-ka-8uh"/>
+                                    <constraint firstAttribute="trailing" secondItem="NP5-vI-sGw" secondAttribute="trailing" constant="20" id="KmN-rX-B8q"/>
+                                    <constraint firstItem="NP5-vI-sGw" firstAttribute="leading" secondItem="x8A-BB-XzR" secondAttribute="leading" constant="20" id="LfC-oM-d2h"/>
+                                    <constraint firstItem="c0B-6l-Thw" firstAttribute="leading" secondItem="x8A-BB-XzR" secondAttribute="leading" constant="20" id="UAj-NV-p6Z"/>
+                                    <constraint firstItem="7QX-VT-mA7" firstAttribute="leading" secondItem="x8A-BB-XzR" secondAttribute="leading" constant="20" id="v0W-uV-ktn"/>
+                                </constraints>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTd-BL-LDr" customClass="DrawingView" customModule="ChenXiaoLiu_Lab3" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="390" height="584"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <constraints>
+                            <constraint firstItem="x8A-BB-XzR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6bp-mT-jpi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="x8A-BB-XzR" secondAttribute="bottom" id="7lh-LE-SI5"/>
+                            <constraint firstItem="sTd-BL-LDr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="9uQ-Lb-s53"/>
+                            <constraint firstItem="sTd-BL-LDr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D0v-OP-FQh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="x8A-BB-XzR" secondAttribute="trailing" id="dYw-W0-uya"/>
+                            <constraint firstItem="x8A-BB-XzR" firstAttribute="top" secondItem="sTd-BL-LDr" secondAttribute="bottom" constant="15" id="uVE-03-l1L"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sTd-BL-LDr" secondAttribute="trailing" id="znY-4V-7yz"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Welcome" id="vfr-gs-BI8">
+                        <barButtonItem key="rightBarButtonItem" title="Clear" id="PdY-Tz-wCP"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="canvas" destination="sTd-BL-LDr" id="5T5-j7-sCi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="927.69230769230762" y="93.127962085308056"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="r1P-lA-To1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="K9n-LK-uBt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4vS-vi-dRM">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="G8H-LB-OfI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zJP-Vc-m5Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="93.75"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="circle" catalog="system" width="128" height="121"/>
+        <image name="square" catalog="system" width="128" height="114"/>
+        <image name="triangle" catalog="system" width="128" height="112"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
