--- a/ChenXiaoLiu-Lab3/Base.lproj/Main.storyboard
+++ b/ChenXiaoLiu-Lab3/Base.lproj/Main.storyboard
@@ -11,13 +11,13 @@
         <!--Welcome-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ChenXiaoLiu_Lab3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="ChenXiaoLiu_Lab3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="x8A-BB-XzR">
-                                <rect key="frame" x="0.0" y="687" width="390" height="123"/>
+                                <rect key="frame" x="0.0" y="641" width="390" height="169"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="c0B-6l-Thw">
                                         <rect key="frame" x="20" y="0.0" width="350" height="32"/>
@@ -33,8 +33,18 @@
                                             <action selector="colorDidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="kYE-pY-cbC"/>
                                         </connections>
                                     </segmentedControl>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7QX-VT-mA7">
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="SK4-Ic-P1Y">
                                         <rect key="frame" x="20" y="46" width="350" height="32"/>
+                                        <segments>
+                                            <segment title="Solid"/>
+                                            <segment title="Outline"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="shapeTypedidChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Asr-4O-XLe"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7QX-VT-mA7">
+                                        <rect key="frame" x="20" y="92" width="350" height="32"/>
                                         <segments>
                                             <segment title="" image="square" catalog="system"/>
                                             <segment title="" image="circle" catalog="system"/>
@@ -45,7 +55,7 @@
                                         </connections>
                                     </segmentedControl>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="NP5-vI-sGw">
-                                        <rect key="frame" x="20" y="92" width="350" height="32"/>
+                                        <rect key="frame" x="20" y="138" width="350" height="32"/>
                                         <segments>
                                             <segment title="Draw"/>
                                             <segment title="Move"/>
@@ -59,15 +69,17 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="c0B-6l-Thw" secondAttribute="trailing" constant="20" id="6Il-cy-dPd"/>
+                                    <constraint firstItem="SK4-Ic-P1Y" firstAttribute="leading" secondItem="x8A-BB-XzR" secondAttribute="leading" constant="20" id="C90-Zi-QlA"/>
                                     <constraint firstAttribute="trailing" secondItem="7QX-VT-mA7" secondAttribute="trailing" constant="20" id="FXy-ka-8uh"/>
                                     <constraint firstAttribute="trailing" secondItem="NP5-vI-sGw" secondAttribute="trailing" constant="20" id="KmN-rX-B8q"/>
                                     <constraint firstItem="NP5-vI-sGw" firstAttribute="leading" secondItem="x8A-BB-XzR" secondAttribute="leading" constant="20" id="LfC-oM-d2h"/>
                                     <constraint firstItem="c0B-6l-Thw" firstAttribute="leading" secondItem="x8A-BB-XzR" secondAttribute="leading" constant="20" id="UAj-NV-p6Z"/>
+                                    <constraint firstAttribute="trailing" secondItem="SK4-Ic-P1Y" secondAttribute="trailing" constant="20" id="aFq-5Y-VG2"/>
                                     <constraint firstItem="7QX-VT-mA7" firstAttribute="leading" secondItem="x8A-BB-XzR" secondAttribute="leading" constant="20" id="v0W-uV-ktn"/>
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTd-BL-LDr" customClass="DrawingView" customModule="ChenXiaoLiu_Lab3" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="390" height="584"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="538"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <gestureRecognizers/>
                             </view>
@@ -90,6 +102,11 @@
                         </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Welcome" id="vfr-gs-BI8">
+                        <barButtonItem key="leftBarButtonItem" title="Option" id="aEJ-Ad-vcK">
+                            <connections>
+                                <action selector="optionButtonPressed:" destination="BYZ-38-t0r" id="sTR-90-Yn9"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Clear" id="PdY-Tz-wCP">
                             <connections>
                                 <action selector="clearButtonPressed:" destination="BYZ-38-t0r" id="icK-Hg-iBW"/>
@@ -100,6 +117,7 @@
                         <outlet property="canvas" destination="sTd-BL-LDr" id="5T5-j7-sCi"/>
                         <outlet property="pinchGestureRecognizer" destination="5EX-i1-N4q" id="YjH-Pg-phr"/>
                         <outlet property="rotationGestureRecognizer" destination="PJ8-wy-1CE" id="sQp-1x-1e5"/>
+                        <outlet property="shapeTypes" destination="SK4-Ic-P1Y" id="QnG-c7-rG9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
